Updated with version: 3.19.0 changes

--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -455,6 +455,10 @@
     "message":"Protecció contra el programari maliciós",
     "description":"A filter list"
   },
+  "filterbitcoin_mining_protection":{
+    "message":"Llista de protecció minera de criptomoneda (Bitcoin)",
+    "description":"A filter list"
+  },
   "filterlatvian":{
     "message":"Letó",
     "description":"A filter list"
